--- a/Final_Project/src/userinterface/StoreManagerRole/StoreWorkAreaJPanel.form
+++ b/Final_Project/src/userinterface/StoreManagerRole/StoreWorkAreaJPanel.form
@@ -38,8 +38,8 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jScrollPane1" min="-2" pref="577" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Component id="btnGiveAway" min="-2" pref="99" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="btnGiveAway" min="-2" pref="125" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="btnDailySub" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
