--- a/Final_Project/src/userinterface/StoreChainManagerRole/ManageStoreManagerAccountJPanel.form
+++ b/Final_Project/src/userinterface/StoreChainManagerRole/ManageStoreManagerAccountJPanel.form
@@ -84,6 +84,7 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="backjButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="createUserJButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
