--- a/Final_Project/src/userinterface/CompostManagerRole/CompostManagerWorkAreaJPanel.form
+++ b/Final_Project/src/userinterface/CompostManagerRole/CompostManagerWorkAreaJPanel.form
@@ -107,7 +107,7 @@
                 <Column editable="false" title="Receiver" type="java.lang.Object"/>
                 <Column editable="false" title="Status" type="java.lang.Object"/>
                 <Column editable="false" title="Quantity" type="java.lang.Object"/>
-                <Column editable="true" title="Result" type="java.lang.Object"/>
+                <Column editable="false" title="Result" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
