--- a/Final_Project/src/userinterface/InventoryManagerRole/InventoryManagerWorkAreaJPanel.form
+++ b/Final_Project/src/userinterface/InventoryManagerRole/InventoryManagerWorkAreaJPanel.form
@@ -26,9 +26,8 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnGiveAway" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btnProcess" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="102" attributes="0">
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="txtStock" min="-2" pref="68" max="-2" attributes="0"/>
@@ -37,13 +36,17 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="txtGiveAway" min="-2" pref="68" max="-2" attributes="0"/>
                           </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="btnProcess" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="249" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="btnDailySub" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btnRequestWork" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="btnDailySub" max="32767" attributes="0"/>
+                                  <Component id="btnRequestWork" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
@@ -170,7 +173,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Calligraphy" size="12" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Request Work"/>
+        <Property name="text" type="java.lang.String" value="Request Lab"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRequestWorkActionPerformed"/>
